syntax = "proto3";

package ui;

import "api.proto";
import "geometry.proto";

option go_package = "diagonal.works/b6/proto";

message UIRequestProto {
    api.NodeProto node = 1;
    string expression = 2;
    api.FeatureIDProto context = 3;
    bool locked = 4;
}

message UIResponseProto {
    StackProto stack = 1;
    api.NodeProto node = 2;
    string expression = 3;
    FeatureIDsProto highlighted = 4;
    repeated BucketedProto bucketed = 5;
    repeated MapLayerProto layers = 6;
    geometry.PointProto mapCenter = 7;
    bool locked = 8;
    repeated int32 chipValues = 9;
}

enum MapLayerPosition {
    MapLayerPositionEnd = 0;
    MapLayerPositionRoads = 1;
    MapLayerPositionBuildings = 2;
}

message MapLayerProto {
    string query = 1;
    MapLayerPosition before = 2;
}

message StackProto {
    repeated SubstackProto substacks = 1;
}

message SubstackProto {
    repeated LineProto lines = 1;
    bool collapsable = 2;
}

message LineProto {
    oneof line {
        ValueLineProto value = 1;
        LeftRightValueLineProto leftRightValue = 2;
        ExpressionLineProto expression = 3;
        TagsLineProto tags = 4;
        HistogramBarLineProto histogramBar = 5;
        SwatchLineProto swatch = 6;
        ShellLineProto shell = 7;
        ChoiceLineProto choice = 8;
        ErrorLineProto error = 9;
    }
}

message ValueLineProto {
    AtomProto atom = 1;
    api.NodeProto clickExpression = 2;
}

message LeftRightValueLineProto {
    repeated ClickableAtomProto left = 1;
    ClickableAtomProto right = 2;
}

message ClickableAtomProto {
    AtomProto atom = 1;
    api.NodeProto clickExpression = 2;
}

message ExpressionLineProto {
    string expression = 1;
}

message TagsLineProto {
    repeated TagAtomProto tags = 1;
}

message TagAtomProto {
    string prefix = 1;
    string key = 2;
    string value = 3;
    api.NodeProto clickExpression = 4;
}

message HistogramBarLineProto {
    AtomProto range = 1;
    int32 value = 2;
    int32 total = 3;
    int32 index = 4;
}

message SwatchLineProto {
    AtomProto label = 1;
    int32 index = 2;
}

message ShellLineProto {
    repeated string functions = 1;
}

message ChoiceLineProto {
    AtomProto label = 1;
    repeated AtomProto chips = 2;
}

message ChoiceProto {
    repeated int32 chipValues = 1;
    AtomProto label = 2;
}

message ErrorLineProto {
    string error = 1;
}

message AtomProto {
    oneof atom {
        string value = 1;
        LabelledIconProto labelledIcon = 2;
        string download = 3;
        ChipProto chip = 4;
    }
    repeated int32 geojson = 6; // References geojson array in response
}

message LabelledIconProto {
    string icon = 1;
    string label = 2;    
}

message ChipProto {
    int32 index = 1;
    repeated string options = 2;
}

message BucketedProto {
    repeated int32 chipValues = 1;
    repeated FeatureIDsProto buckets = 2;
}

message FeatureIDsProto {
    repeated string namespaces = 3;
    repeated IDsProto ids = 4;
}

message IDsProto {
    repeated uint64 ids = 1;
}

